getting-started-guides/supporting-files/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: frontend
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/dotnet/fibonacci" }
                          route: { cluster: dotnet, prefix_rewrite: "/fibonacci" }
                        - match: { prefix: "/go/fibonacci" }
                          route: { cluster: go, prefix_rewrite: "/fibonacci" }
                        - match: { prefix: "/javascript/fibonacci" }
                          route: { cluster: javascript, prefix_rewrite: "/fibonacci" }
                        - match: { prefix: "/ruby/fibonacci" }
                          route: { cluster: ruby, prefix_rewrite: "/fibonacci" }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: dotnet
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: dotnet
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: dotnet
                      port_value: 8080
    - name: go
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: go
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: go
                      port_value: 8080
    - name: javascript
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: javascript
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: javascript
                      port_value: 8080
    - name: ruby
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ruby
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ruby
                      port_value: 8080
